2020-06-04  Karl Berry  <karl@freefriends.org>

	* Makefile (SearchFonts.java, etc.): disable dependencies so as
	not to uselessly remake everything when files are not in the right
		place.

2020-06-04  Vincent_Bela\"iche  <vincent.belaiche@gmail.com>

	* xtpipes.tex (\AddFileC): Remove appending slash to directory
	argument, as it ends prematurely the \MakeDir loop by having an
	unwanted // pattern in the path.

2020-06-03 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4-math.4ht): handle nested math in amsmath
	version of \[\].
	https://tug.org/pipermail/tex4ht/2020q2/002561.html

2020-06-02 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (latex.4ht): fixed bug in tabbing environment.
	https://tug.org/pipermail/tex4ht/2020q2/002565.html
		
2020-05-31  Vincent_Bela\"iche  <vincent.belaiche@gmail.com>

	* tex4ht-dir.m4: new file, used to generate with m4:
	* tex4ht-dir.tex: generate, with java-related directories too.
	* Makefile (tex4ht-dir.tex): do the generation.
	(dirs): new variable, list of dirs to substitute.
	(common_no_cond_sty): add tex4ht-dir.tex.
	(tex4ht_docbook_xtpipes_derived, many others): use new directory vars
	for .java file locations, etc.
	(xtpipes.jar, tex4ht.jar, jar): new targets.

2020-05-31 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4-math.4ht): added default definition for
	\:RestoreMathjaxCatcodes.
	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht): fix \sum in TOC.
	https://puszcza.gnu.org.ua/bugs/index.php?468

2020-05-27 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex,
	* tex4ht-fonts-modern.tex,
	* tex4ht-fonts-4hf.tex (
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lm/lm-qx/lm-qx.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/iwona/greek-iwona.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/libertine/fxlr-xl-03.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/libertine/fxlr-xl-ts1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/lm-qxtt.htf