@@ -3648,6 +3648,7 @@ lm-qxtt 1 255
 lm-qxtt 1 255
 >>>
 
+\AddFont{lm-qxtt-LM-05}{unicode/lm/lm-qxtt}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -4221,10 +4222,7 @@ htfcss: qx-lmvtto font-style:italic; font-style: oblique;
 
 
 
-\AddFont{lm-qx-LM-05}{unicode/lm/lm-qx}
 
-
-\AddFont{lm-qxtt-LM-05}{unicode/lm/lm-qxtt}
 
 
 
