@@ -21226,7 +21226,7 @@ htfcss: txtt font-family: monospace,monospace;
 htfcss: txttsl font-style: italic;
 >>>
 
-\AddFont{txb}{unicode/txfonts/txtt}
+\AddFont{txtt}{unicode/txfonts/txtt}
 
 
 
@@ -23989,14 +23989,6 @@ htfcss: zppleb7t font-weight: bold;
 \AddFont{zppleb7t}{alias/mathpple/zppleb7t}
 
 
-\<zppleb7m\><<<
-.cmmi
-htfcss: zppleb7m font-style: italic; font-weight: bold;
->>>
-\AddFont{zppleb7m}{alias/mathpple/zppleb7m}
-
-
-
 \<zppleb7y\><<<
 .cmsy
 htfcss: zppleb7y font-weight: bold;
@@ -26606,8 +26598,7 @@ htfcss: phvro8rn font-family: sans-serif;    font-style: oblique;
 
 
 
-
-\SubSection{pcrb
+\SubSection{phvb
 phvb
 phvbo
 phvbon
@@ -26616,11 +26607,6 @@ phvr
 phvro
 phvron
 phvrrn}
-
-
-
-
-\AddFont{pcrb}{alias/adobe/helvetic/pcrb}{}
 
 \<phvb\><<<
 .ptmrre
@@ -36392,294 +36378,9 @@ htfcss: currtbi font-family: monospace,monospace; font-style: italic; font-weigh
 \AddFont{curr}{iso8859/1/sw/curr}
 
 
-
-
-
-
-
-\<ma1r8c\><<<
-ma1r8c 0 246
-'&#x21BE;' ''              0 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-'&#x2336;' ''   r-quote(?) 1 % ma1r8c                        `version %   
-'&#x005E;' '' ^            2 % Copyright `CopyYear.2006. Eitan M. Gurari %
-'&#x007E;' ''~             3 `<version 2`>
-'&#x23A2;' ''              4 `<version 3`>
-'&#x007E;' '' hungarumlaut 5 `<version 4`>
-'&#x030A;' ''              6 `<version 5`>
-'&#x23A3;' ''              7 `<version 6`>
-'&#x0306;' ''              8 `<version 7`> 
-'&#x00AF;' ''              9 `<version 8`>
-'&#x0307;' ''             10 `<version 9`>
-'&#x00B8;' ''             11 `<version 10`>
-'&#x0332;' ''             12 `<version 11`>
-'&#x0326;' ''             13 `<version 12`>
-'' ''                     14 `<version 13`>
-'' ''                     15 `<version 14`>
-'' ''                     16 `<version 15`>
-'' ''                     17 `<version 16`>
-'&#8222;' ''              18 `<version 17`>
-'' ''                     19 `<version 18`>
-'' ''                     20
-'&#x2013;' ''             21
-'&#x2014;' ''             22
-'' ''            23
-'&#x2190;' '' leftarrow   24
-'&#x2192;' '' rightarrow     25
-'&#x25FE;' ''                   26
-'&#x25FE;' ''                         27
-'&#x25FE;' ''                          28
-'&#x25FE;' ''                          29
-'' ''                          30
-'' ''                          31
-'&#x25FC;' ''           32
-'' ''                          33
-'' ''                          34
-'' ''                          35
-'$' ''            36
-'' ''                          37
-'' ''                          38
-'&#x0027;' ''           39
-'' ''                          40
-'' ''                          41
-'*' ''            42
-'' ''                          43
-',' ''            44
-'&#x25FC;' ''            45
-'.' ''            46
-'/' ''            47
-'&#x25FC;' ''            48
-'&#x25FC;' ''            49
-'&#x25FC;' ''            50
-'&#x25FC;' ''            51
-'&#x25FC;' ''            52
-'&#x25FC;' ''            53
-'&#x25FC;' ''            54
-'&#x25FC;' ''            55
-'&#x25FC;' ''            56
-'&#x25FC;' ''            57
-'' ''                          58
-'' ''                          59
-'&#x25FC;' ''            60
-'-' ''            61
-'&#x25FC;' ''            62
-'' ''                          63
-'' ''                          64
-'' ''                          65
-'' ''                          66
-'' ''                          67
-'' ''                          68
-'' ''                          69
-'' ''                          70
-'' ''                          71
-'' ''                          72
-'' ''                          73
-'' ''                          74
-'' ''                          75
-'' ''                          76
-'&#x25FC;' ''            77
-'' ''                          78
-'&#x25FC;' ''                          79
-'' ''                          80
-'' ''                          81
-'' ''                          82
-'' ''                          83
-'' ''                          84
-'' ''                          85
-'' ''                          86
-'&#x2127;' ''                          87
-'' ''                          88
-'' ''                          89
-'' ''                          90
-'&#x005B;' ''                          91
-'' ''                          92
-'&#x005D;' ''            93
-'&#x2191;' ''  uparrow         94
-'&#x2193;' '' downarrow           95
-'&#x2018;' ''            96
-'' ''                          97
-'&#x25FC;' ''                          98
-'&#x25FC;' ''                      99
-'&#x25FC;' ''                          100
-'' ''                          101
-'' ''                          102
-'' ''                          103
-'' ''                          104
-'' ''                          105
-'' ''                          106
-'' ''                          107
-'&#x25FC;' ''                          108
-'&#x25FC;' ''                          109
-'&#x226A;' ''                          110
-'' ''                          111
-'' ''                          112
-'' ''                          113
-'' ''                          114
-'' ''                          115
-'' ''                          116
-'' ''                          117
-'' ''                          118
-'' ''                          119
-'' ''                          120
-'' ''                          121
-'' ''                          122
-'' ''                          123
-'' ''                          124
-'' ''                          125
-'' ''                          126
-'&#x25FC;' ''                          127
-'' ''                          128
-'' ''                          129
-'' ''                          130
-'' ''                          131
-'&#x2020;' ''                          132
-'&#x2021;' ''                          133
-'&#x2016;' ''                          134
-'&#x2030;' ''                          135
-'&#x22C5;' ''                          136
-'&#x2103;' ''                          137
-'&#x25FC;' ''                          138
-'&#x25FC;' ''                          139
-'f' ''                          140
-'&#x25FC;' ''                          141
-'&#x25FC;' ''                          142
-'&#x25FC;' ''                          143
-'&#x25FC;' ''                          144
-'&#x25FC;' ''                          145
-'&#x20A4;' ''                          146
-'&#x25FC;' ''                          147
-'&#x203D;' ''                          148
-'???' ''                          149
-'&#x20AB;' ''                          150
-'&#x2122;' ''                          151
-'&#x25FC;' ''                          152
-'&#x25FC;' ''                          153
-'&#x25FC;' ''                          154
-'&#x2116;' ''                          155
-'&#x25FC;' ''                          156
-'&#x213E;' ''                          157
-'&#x22C4;' ''                          158
-'&#x25FC;' ''                          159
-'&#x25FC;' ''                          160
-'&#x25FC;' ''                          161
-'&#x00A2;' ''                          162
-'&#x00A3;' ''                          163
-'&#x00A4;' ''                          164
-'&#x00A5;' ''                          165
-'&#x00A6;' ''                          166
-'&#x00A7;' ''                          167
-'&#x00A8;' ''                          168
-'&#x24B8;' ''                          169
-'&#x00A9;' ''                          170
-'&#x25FC;' ''                          171
-'&#x00AC;' ''                          172
-'&#x25FC;' ''                          173
-'&#x00AE;' ''                          174
-'&#x00AF;' ''                          175
-'&#x00B0;' ''                          176
-'&#x00B1;' ''                          177
-'&#x00B2;' ''                          178
-'&#x00B3;' ''                          179
-'&#x00B4;' ''                          180
-'&#x00B5;' ''  \textmu, micro sign     181
-'&#x00B6;' ''                          182
-'&#x00B7;' ''                          183
-'&#x25FC;' ''                          184
-'&#x00B9;' ''                          185
-'&#x00BA;' ''                          186
-'&#x221A;' ''                          187
-'&#x00BC;' ''                          188
-'&#x00BD;' ''                          189
-'&#x00BE;' ''                          190
-'&#x20AC;' ''                          191
-'' ''                          192
-'' ''                          193
-'' ''                          194
-'' ''                          195
-'' ''                          196
-'' ''                          197
-'' ''                          198
-'' ''                          199
-'' ''                          200
-'' ''                          201
-'' ''                          202
-'' ''                          203
-'' ''                          204
-'' ''                          205
-'' ''                          206
-'' ''                          207
-'' ''                          208
-'' ''                          209
-'' ''                          210
-'' ''                          211
-'' ''                          212
-'' ''                          213
-'&#x00D7;' ''                          214
-'' ''                          215
-'' ''                          216
-'' ''                          217
-'' ''                          218
-'' ''                          219
-'' ''                          220
-'' ''                          221
-'' ''                          222
-'' ''                          223
-'' ''                          224
-'' ''                          225
-'' ''                          226
-'' ''                          227
-'' ''                          228
-'' ''                          229
-'' ''                          230
-'' ''                          231
-'' ''                          232
-'' ''                          233
-'' ''                          234
-'' ''                          235
-'' ''                          236
-'' ''                          237
-'' ''                          238
-'' ''                          239
-'' ''                          240
-'' ''                          241
-'' ''                          242
-'' ''                          243
-'' ''                          244
-'' ''                          245
-'&#x00F7;' ''                          246
-ma1r8c 0 246
->>>
-
-\AddFont{ma1r8c}{unicode//monotype/arial/ma1r8c}
-
-
-
-\<ma1r8t\><<<
-.lm-ec
-htfcss: ma1r8t font-family: monospace,monospace;
->>>
-
-\AddFont{ma1r8t}{unicode//monotype/arial/ma1r8t}
-
-
-\<ma1b8t\><<<
-.lm-ec
-htfcss: ma1r8t font-weight: bold; 
->>>
-
-\AddFont{ma1b8t}{unicode//monotype/arial/ma1b8t}
-
-
-
-
-
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{go}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
 
 \<go\><<<
 go 0 18
